minikube/ingress-nginx/nginx copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
      - name: nginx-2
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-2
spec:
 type: NodePort
 selector:
   app: nginx-2
 ports:
   - port: 80
     targetPort: 80
